[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/background/3.png" type="Texture" id=1]
[ext_resource path="res://scenes/home/ParallaxBackground.gd" type="Script" id=2]
[ext_resource path="res://scenes/home/BgSprite.gd" type="Script" id=3]
[ext_resource path="res://scenes/common/Background.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 201, 42 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 200, 42.5 )

[node name="Background" type="Sprite"]
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 400, 0 )

[node name="BgSprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 200, 357.5 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Floor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 200, 673 )
shape = SubResource( 1 )

[node name="Ceiling" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
position = Vector2( 201, 42.5 )
shape = SubResource( 2 )

[node name="Ceiling2" type="Area2D" parent="."]
position = Vector2( 0, -83 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling2"]
position = Vector2( 201, 42.5 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Floor" to="." method="_on_Floor_area_entered"]
[connection signal="area_entered" from="Ceiling" to="." method="_on_Ceiling_area_entered"]
[connection signal="area_entered" from="Ceiling2" to="." method="_on_Ceiling2_area_entered"]
